apps/httpbin/base/04-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      serviceAccountName: httpbin
      containers:
      - image: ghcr.io/mccutchen/go-httpbin:2.18
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 8080
