apps/httpbin/base/05-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpbin
spec:
  to:
    kind: Service
    name: httpbin
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
